fix: (grid) change the size of gap

--- a/src/styles/movie.grid.module.scss
+++ b/src/styles/movie.grid.module.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     place-items: center;
-    gap: 2.5rem;
+    gap:  1.5rem 0;
     height: auto;
     overflow: visible; /* Allows the card to grow outside its box */
   }
